--- a/src/app/modules/private/user-board/user-board.component.scss
+++ b/src/app/modules/private/user-board/user-board.component.scss
@@ -3,8 +3,10 @@
 }
 
 .title-personal-info {
-    margin-left: 15px;
+    //margin-left: 15px;
     margin-bottom: 15px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .board-container {
@@ -15,6 +17,11 @@
         display: flex;
         flex-direction: column;
     }
+}
+
+.edit-button {
+    border-radius: 25px;
+    height: 35px;
 }
 
 
@@ -34,6 +41,11 @@
     }
 }
 
+.main-title {
+    margin-bottom: 10px;
+    margin-left: 15px;
+}
+
 .title {
     border-radius: 15px;
     box-shadow: 0 10px 60px -6px #777, 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -49,12 +61,22 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    > img {
-        border-radius: 75px;
-    }
     > span {
         margin-top: 10px;
     }
+}
+
+.user-info{
+    padding-left: 15px;
+}
+
+.common-text{
+color: grey;
+}
+
+img {
+    //border-radius: 75px;
+    border-radius: 50% !important;
 }
 
 .error {
@@ -161,5 +183,9 @@ mat-radio-group {
     transform: translateY(-1.1em) scale(.75);
     width: 133.33333%;
 }
+
+::ng-deep .mat-form-field-wrapper{
+    margin-bottom: -1.25em !important;
+ }
 
 
