--- a/src/app/modules/register/register/register.component.html
+++ b/src/app/modules/register/register/register.component.html
@@ -1,11 +1,11 @@
 <div class="register">
-  <div class="register-column background-filter">
+  <div class="register-column">
     <div class="row full-width">
       <div class="div-btn">
-        <button class="register-btn" mat-raised-button color="primary" (click)="goToPrivateUser()">Private User</button>
+        <button class="register-btn" mat-raised-button (click)="goToPrivateUser()">Private User</button>
       </div>
       <div class="div-btn">
-        <button class="register-btn" mat-raised-button color="accent" (click)="goToCompany()">Professional</button>
+        <button class="register-btn-professional" mat-raised-button (click)="goToCompany()">Professional</button>
       </div>
     </div>
     <div class="full-width">
