--- a/src/app/modules/register/register/register.component.scss
+++ b/src/app/modules/register/register/register.component.scss
@@ -17,6 +17,18 @@
     border-radius: 25px;
     font-size: larger;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: black;
+    color:white;
+}
+
+.register-btn-professional {
+    width: 95%;
+    height: 50px;
+    border-radius: 25px;
+    font-size: larger;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(110, 52, 226);
+    color:white
 }
 
 .register-column {
