--- a/src/app/shared/component/filter/filter-property/filter-property.component.scss
+++ b/src/app/shared/component/filter/filter-property/filter-property.component.scss
@@ -21,7 +21,8 @@
   // color: blue;
   // border-style: solid;
   // border-width: 2px;
-  background-color: aliceblue;
+  // background-color: aliceblue;
+  background-color: rgb(241, 241, 241);
 }
 
 // Material Override PLACE TO STYLES
