--- a/src/app/shared/component/navbar/navbar.component.scss
+++ b/src/app/shared/component/navbar/navbar.component.scss
@@ -20,7 +20,7 @@
     align-items: center;
     width: 120px;
     height: 35px;
-    font-size: large;
+    font-size: 15px;
     background-color: #0361ec;
     border-radius: 25px;
     margin-left: 5px;
@@ -33,7 +33,7 @@
     align-items: center;
     width: 120px;
     height: 35px;
-    font-size: large;
+    font-size: 15px;
     background-color: rgb(110, 52, 226);
     border-radius: 25px;
     margin-left: 5px;
@@ -46,7 +46,7 @@
     align-items: center;
     width: 120px;
     height: 35px;
-    font-size: large;
+    font-size: 15px;
     //background-color: rgb(131, 241, 245);
     background-color: white;
     border-radius: 25px;
