--- a/src/app/modules/register/register-company/register-company.component.html
+++ b/src/app/modules/register/register-company/register-company.component.html
@@ -4,15 +4,18 @@
       <div class="row register-header">
         Create professional account
       </div>
-
+      <mat-divider></mat-divider>
+      
       <div class="row full-width ">
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Company Name</div>
           <mat-form-field class="form-field" appearance="outline">
-            <mat-label>Company name</mat-label>
+            <mat-label>Company Name</mat-label>
             <input matInput placeholder="Name">
           </mat-form-field>
         </div>
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Company sector</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Company sector</mat-label>
             <mat-select>
@@ -24,7 +27,8 @@
         </div>
       </div>
       <div class="row full-width">
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Country</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Country</mat-label>
             <mat-select>
@@ -34,7 +38,8 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">City</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>City</mat-label>
             <mat-select>
@@ -46,13 +51,15 @@
         </div>
       </div>
       <div class="row full-width">
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Address</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Address</mat-label>
             <input matInput placeholder="Name">
           </mat-form-field>
         </div>
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Phone number</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Zip Code</mat-label>
             <input matInput placeholder="Name">
@@ -60,13 +67,15 @@
         </div>
       </div>
       <div class="row full-width">
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Phone number</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Phone number</mat-label>
             <input matInput placeholder="Name">
           </mat-form-field>
         </div>
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Email</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Email</mat-label>
             <input matInput placeholder="Name">
@@ -74,13 +83,15 @@
         </div>
       </div>
       <div class="row full-width">
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Contact person name</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Contact person name</mat-label>
             <input matInput placeholder="Name">
           </mat-form-field>
         </div>
-        <div class="width-50">
+        <div class="width-50 column">
+          <div class="bold-text">Job title</div>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Job title</mat-label>
             <input matInput placeholder="Name">
