--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -9,10 +9,6 @@
       <button mat-raised-button color="primary" class="mat-button width-100">Messages</button>
     </div>
     <div class="button-wrapper">
-      <button mat-raised-button color="primary" class="mat-button width-100"
-        [routerLink]="['/settings']">Settings</button>
-    </div>
-    <div class="button-wrapper">
       <button mat-raised-button color="primary" class="mat-button width-100" [routerLink]="['/my-listings']">My
         Listings</button>
     </div>
@@ -33,13 +29,14 @@
         <div class="row title-personal-info">Personal information</div>
 
         <!--REAL First Name and Last Name-->
+        <mat-divider></mat-divider>
         <div class="main-title">First & Last Name</div>
-        <div class="column user-info" *ngIf="toogleName">
+        <div class="column padding-left" *ngIf="toogleName">
           <div class="row">
-            <div class="common-text" *ngIf="user.Name">{{user.Name}}</div>
+            <div class="common-text" *ngIf="user.Name">{{user.Name}}&nbsp;</div>
             <div class="common-text" *ngIf="user.Surname">{{user.Surname}}</div>
             <div class="common-text" *ngIf="user.Name==undefined && user.Surname==undefined">Not provided</div>
-            <button mat-raised-button color="primary" class="edit-button margin-left" (click)="toogle_name()">Edit</button>
+            <button mat-raised-button class="edit-button margin-left" (click)="toogle_name()">Edit</button>
           </div>
         </div>
         <!--EDIT First Name and Last Name TODO ngif-->
@@ -62,31 +59,37 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <button mat-raised-button color="warn" class="edit-button margin-left" (click)="toogle_name()">Cancel</button>
-        </div>
-
-        <div class="row">
-          <div class="cell">
-            <mat-form-field class="form-field" appearance="outline">
-              <mat-label>City</mat-label>
-              <input matInput [(ngModel)]="user.City" [ngModelOptions]="{standalone: true}" required>
-            </mat-form-field>
-          </div>
-          <div class="cell">
-            <mat-form-field class="form-field" appearance="outline">
-              <mat-label>Country</mat-label>
-              <input matInput [(ngModel)]="user.Country" [ngModelOptions]="{standalone: true}" required>
-            </mat-form-field>
+          <div class="margin-left">
+            <button mat-raised-button class="save-button" (click)="save()">Save</button>
+            <button mat-raised-button class="edit-button" (click)="toogle_name()">Cancel</button>
           </div>
         </div>
-        <div class="row">
-          <div class="cell width-50_2">
-            <mat-form-field class="form-field width-100" appearance="outline">
-              <mat-label>Address</mat-label>
-              <input matInput [(ngModel)]="user.Address" [ngModelOptions]="{standalone: true}">
-            </mat-form-field>
+        <!--EDIT ADDRESS-->
+        <mat-divider></mat-divider>
+        <div class="main-title">Address</div>
+        <div class="padding-left" *ngIf="!toogleAddress">
+          <div class="row">
+            <div class="cell">
+              <mat-form-field class="form-field" appearance="outline">
+                <mat-label>City</mat-label>
+                <input matInput [(ngModel)]="user.City" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </div>
+            <div class="cell">
+              <mat-form-field class="form-field" appearance="outline">
+                <mat-label>Country</mat-label>
+                <input matInput [(ngModel)]="user.Country" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </div>
           </div>
-          <div class="cell">
+          <div class="row">
+            <div class="cell width-50_2">
+              <mat-form-field class="form-field width-100" appearance="outline">
+                <mat-label>Address</mat-label>
+                <input matInput [(ngModel)]="user.Address" [ngModelOptions]="{standalone: true}">
+              </mat-form-field>
+            </div>
+            <!-- <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
               <mat-label>Tax Number</mat-label>
               <input matInput [(ngModel)]="user.TaxNumber" [ngModelOptions]="{standalone: true}" required>
@@ -94,13 +97,123 @@
                 Last Name is required
               </mat-error>
             </mat-form-field>
+          </div> -->
+            <div class="margin-left">
+              <button mat-raised-button class="save-button" (click)="save()">Save</button>
+              <button mat-raised-button class="edit-button" (click)="toogle_address()">Cancel</button>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="row row-margin">
-      <div class="cell width-25 margin-left">
-        <button class="width-100 mat-button" mat-raised-button color="accent" (click)="save()"> Save </button>
+        <!--EDIT ADDRESS-->
+        <div class="padding-left" *ngIf="toogleAddress">
+          <div class="row">
+            <div class="common-text" *ngIf="user.City">{{user.City}}&nbsp;</div>
+            <div class="common-text" *ngIf="user.Country">{{user.Country}}&nbsp;</div>
+            <div class="common-text" *ngIf="user.Address">{{user.Address}}</div>
+            <div class="common-text" *ngIf="user.City==undefined && user.Country==undefined && user.Address==undefined">
+              Not provided</div>
+            <button mat-raised-button color="warn" class="edit-button margin-left"
+              (click)="toogle_address()">Edit</button>
+          </div>
+        </div>
+        <!--REAL Email-->
+        <mat-divider></mat-divider>
+        <div class="main-title">Email</div>
+        <div class="column padding-left" *ngIf="toogleEmail">
+          <div class="row">
+            <div class="common-text" *ngIf="user.Email">{{user.Email}}&nbsp;</div>
+            <div class="common-text" *ngIf="user.Email==undefined">Not provided</div>
+            <button mat-raised-button class="edit-button margin-left" (click)="toogle_email()">Edit</button>
+          </div>
+        </div>
+        <!--EDIT Email-->
+        <div class="row" *ngIf="!toogleEmail">
+          <div class="cell">
+            <mat-form-field class="form-field" appearance="outline">
+              <mat-label>Email</mat-label>
+              <input matInput [(ngModel)]="user.Email" [ngModelOptions]="{standalone: true}" required>
+              <mat-error>
+                Email is required
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="margin-left">
+            <button mat-raised-button class="save-button" (click)="save()">Save</button>
+            <button mat-raised-button class="edit-button" (click)="toogle_email()">Cancel</button>
+          </div>
+        </div>
+        <!--REAL Phone number-->
+        <mat-divider></mat-divider>
+        <div class="main-title">Phone number</div>
+        <div class="column padding-left" *ngIf="tooglePhoneNumber">
+          <div class="row">
+            <div class="common-text" *ngIf="user.PhoneNumber">{{user.PhoneNumber}}&nbsp;</div>
+            <div class="common-text" *ngIf="user.PhoneNumber==undefined">Not provided</div>
+            <button mat-raised-button class="edit-button margin-left" (click)="toogle_phoneNumber()">Edit</button>
+          </div>
+        </div>
+        <!--EDIT Phone number-->
+        <div class="row" *ngIf="!tooglePhoneNumber">
+          <div class="cell">
+            <mat-form-field class="form-field" appearance="outline">
+              <mat-label>Email</mat-label>
+              <input matInput [(ngModel)]="user.PhoneNumber" [ngModelOptions]="{standalone: true}" required>
+              <mat-error>
+                Email is required
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="margin-left">
+            <button mat-raised-button class="save-button" (click)="save()">Save</button>
+            <button mat-raised-button class="edit-button" (click)="toogle_phoneNumber()">Cancel</button>
+          </div>
+        </div>
+        <!--REAL Password-->
+        <mat-divider></mat-divider>
+        <div class="main-title">Password</div>
+        <div class="column padding-left" *ngIf="tooglePassword">
+          <div class="row">
+            <div class="common-text">****************</div>
+            <button mat-raised-button class="edit-button margin-left" (click)="toogle_password()">Edit</button>
+          </div>
+        </div>
+        <!--EDIT Password-->
+        <div *ngIf="!tooglePassword">
+          <div class="row">
+            <div class="cell">
+              <mat-form-field class="form-field" appearance="outline">
+                <mat-label>Old Password</mat-label>
+                <input matInput [(ngModel)]="user.Password" [ngModelOptions]="{standalone: true}" required>
+                <mat-error>
+                  Password is required
+                </mat-error>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
+            <div class="cell">
+              <mat-form-field class="form-field" appearance="outline">
+                <mat-label>New Password</mat-label>
+                <input matInput [(ngModel)]="user.Password" [ngModelOptions]="{standalone: true}" required>
+                <mat-error>
+                  Password is required
+                </mat-error>
+              </mat-form-field>
+            </div>
+            <div class="margin-left">
+              <button mat-raised-button class="save-button" (click)="save()">Save</button>
+              <button mat-raised-button class="edit-button" (click)="toogle_password()">Cancel</button>
+            </div>
+          </div>
+        </div>
+        <!--REAL Email-->
+        <mat-divider></mat-divider>
+        <div class="main-title">Delete Account</div>
+        <div class="column padding-left">
+          <div class="row">
+            <button mat-raised-button class="delete-button">Delete</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
