--- a/src/app/modules/property-page/property-detail/property-detail.component.html
+++ b/src/app/modules/property-page/property-detail/property-detail.component.html
@@ -4,77 +4,90 @@
       <div class="column background-filter width-75">
         <div class="row">
           <!--Images-->
-          <div class="column width-60">
+          <div class="column width-60 photos">
             <!--1x Main photo-->
             <div class="card-image">
-              <img [src]="image" width="100%" height="100%">
+              <img [src]="items[0].image" (click)="showLightbox(1)" width="100%" height="100%">
             </div>
-
-            <!--2x-->
-            <div class="row">
-              <div class="width-50">
-                <img [src]="image" width="100%" height="100%">
-              </div>
-              <div class="width-50">
-                <img [src]="image" width="100%" height="100%">
+            <div class="container-image" *ngIf="items">
+              <div *ngFor="let item of items; let i = index" class="item">
+                <img [src]="item.thumbImage" (click)="showLightbox(i)" width="100%" height="100%" />
               </div>
             </div>
-            <div class="row">
-              <div class="width-50">
-                <img [src]="image" width="100%" height="100%">
-              </div>
-              <div class="width-50">
-                <img [src]="image" width="100%" height="100%">
-              </div>
-            </div>
+            <!-- ng-image-fullscreen-view  -->
+            <ng-image-fullscreen-view [images]="items" [imageIndex]="currentIndex" [show]="showFlag"
+              (close)="closeEventHandler()"></ng-image-fullscreen-view>
           </div>
-          <!--Property description-->
+          <!--Property DESCRIPTION-->
           <div class="column width-40 details">
             <!--Price-->
-            <div class="price">{{property.Price}} €</div>
+            <div class="row">
+              <div class="price">{{property.Price}}0 000€&nbsp;</div>
+              <div class="propertyId">Id. {{property.MySqlId}}</div>
+              <div class="margin-left">
+                <div class="material-icons">share</div>
+                <div class="material-icons">favorite_border</div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="colored-box">For Sale</div>
+            </div>
+
             <!--Address-->
             <div class="address">{{property.City}}, {{property.Country}}</div>
             <!--Characteristics-->
-            <div class="row">
+            <div class="row main-characteristics">
               <!--Square meters-->
+              <div class="material-icons gray">home</div>
               <div class="meters">75m</div>
               <!--Typology-->
+              <div class="material-icons gray">hotel</div>
               <div class="typology">T2</div>
               <!--Bathrooms-->
+              <div class="material-icons gray">hot_tub</div>
               <div class="bathrooms">2</div>
             </div>
             <!--map-->
             <div class="map-div">
               <app-map [mapPointInput]="mapPoint"></app-map>
             </div>
-            <!--Description-->
-            <div class="description">
-              <div>Overiview</div>
-              {{property.Description}}
-            </div>
-            <!--Contact form-->
-            <div>
-              <div>Contact</div>
+            <div class="contact-form">
+              <div class="contact">See phone</div>
+              <div>934******</div>
+              <!--Contact form-->
               <div>
-                <mat-form-field class="full-width" appearance="outline">
-                  <mat-label>Name</mat-label>
-                  <input matInput placeholder="Name">
-                </mat-form-field>
-                <mat-form-field class="full-width" appearance="outline">
-                  <mat-label>Phone</mat-label>
-                  <input matInput placeholder="Phone">
-                </mat-form-field>
-                <mat-form-field class="full-width" appearance="outline">
-                  <mat-label>Email</mat-label>
-                  <input matInput placeholder="Email">
-                </mat-form-field>
-                <mat-form-field class="full-width" appearance="outline">
-                  <mat-label>Description</mat-label>
-                  <input matInput placeholder="Description">
-                </mat-form-field>
-                <button>Send message</button>
+                <div class="contact">Contact</div>
+                <div>
+                  <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Your Name</mat-label>
+                    <input matInput placeholder="Name">
+                  </mat-form-field>
+                  <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Your Phone</mat-label>
+                    <input matInput placeholder="Phone">
+                  </mat-form-field>
+                  <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Your Email</mat-label>
+                    <input matInput placeholder="Email">
+                  </mat-form-field>
+                  <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Message</mat-label>
+                    <input matInput placeholder="Description">
+                  </mat-form-field>
+                  <button mat-raised-button class="send-message-btn">Send message</button>
+                </div>
               </div>
             </div>
+            <!--Overview-->
+            <div class="overview">Overview</div>
+            <div class="description">
+              {{property.Description}} dbdbdbdbdb dbdbdbdbdbdbd dbdbdbddb <br>
+              {{property.Description}} dbdbdbdbdb dbdbdbdbdbdbd dbdbdbddb <br>
+              {{property.Description}} dbdbdbdbdb dbdbdbdbdbdbd dbdbdbddb <br>
+            </div>
+            <!--Charecteristcs-->
+            <div class="contact">Characteristics</div>
+            <div>75 m2</div>
           </div>
         </div>
       </div>
