--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -29,7 +29,7 @@
             <a class="nav-link" [routerLink]="['/register']">Register</a>
           </li>
           <li class="nav-item login" *ngIf="!authenticated">
-            <a class="nav-link" [routerLink]="['/login']">Login</a>
+            <a class="nav-link" [routerLink]="['/login']">Sign In</a>
           </li>
 
           <div class="profile" *ngIf="authenticated">
