--- a/src/app/shared/component/sell-house/sell-house.component.scss
+++ b/src/app/shared/component/sell-house/sell-house.component.scss
@@ -4,6 +4,7 @@
     height: 200vh;
     flex-direction: column;
     width: 100%;
+    height: 100%;
 }
 
 .container-center-column {
@@ -94,7 +95,6 @@
 .height {
     height: 500px;
 }
-
 
 
 // Material Override PLACE TO STYLES
