--- a/src/app/modules/property-page/property-detail/property-detail.component.html
+++ b/src/app/modules/property-page/property-detail/property-detail.component.html
@@ -6,17 +6,17 @@
           <!--Images-->
           <div class="column width-60 photos">
             <!--1x Main photo-->
-            <div class="card-image">
+            <div class="card-image" *ngIf="items.length > 0">
               <img [src]="items[0].image" (click)="showLightbox(1)" width="100%" height="100%">
             </div>
-            <div class="container-image" *ngIf="items">
+            <div class="container-image" *ngIf="items.length > 0">
               <div *ngFor="let item of items; let i = index" class="item">
-                <img [src]="item.thumbImage" (click)="showLightbox(i)" width="100%" height="100%" />
+                <img [src]="item.image" (click)="showLightbox(i)" width="100%" height="100%" />
               </div>
             </div>
             <!-- ng-image-fullscreen-view  -->
             <ng-image-fullscreen-view [images]="items" [imageIndex]="currentIndex" [show]="showFlag"
-              (close)="closeEventHandler()"></ng-image-fullscreen-view>
+              (close)="closeEventHandler()" *ngIf="items.length > 0"></ng-image-fullscreen-view>
           </div>
           <!--Property DESCRIPTION-->
           <div class="column width-40 details">
